--- a/recastcontrolcenter/static/css/style.css
+++ b/recastcontrolcenter/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 body,html,h6,h5,h4,h3,h2,h1,p {
     font-family: "Lato";
 }
@@ -25,7 +25,7 @@ body,html,h6,h5,h4,h3,h2,h1,p {
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret { border-bottom-color: #FFFFFF}
 
 
-@import url('http://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 body, h6, h5, h4, h3, h2, h1, html {
     font-family: "Lato", sans-serif;
