--- a/recastcontrolcenter/templates/monitor.html
+++ b/recastcontrolcenter/templates/monitor.html
@@ -1,8 +1,101 @@
 {% extends "base.html" %}
 
 {% block prebody %}
+<script type="text/javascript" src="/static/bower_components/lodash/dist/lodash.js"></script>
+<script type="text/javascript" src="/static/bower_components/vis/dist/vis.js"></script>
+<link href="/static/bower_components/vis/dist/vis.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+
+<style type="text/css">
+    #mynetwork {
+      margin: auto;
+      width: 70%;
+      height: 100px;
+      min-height: 500px;
+      /*border: 1px solid black;*/
+    }
+    #timestamp {
+      margin: auto;
+      width: 70%;
+      text-align: center;          
+      font-family: Helvetica, Arial, Sans-Serif;
+    }
+</style>
+
+
 <script type="text/javascript">
+var edges = undefined;
+var nodes = undefined;
+
+function initialize_graph(){
+  // create an array with nodes
+  nodes = new vis.DataSet([]);
+
+  // create an array with edges
+  edges = new vis.DataSet([]);
+
+  // create a network
+  var container = document.getElementById('mynetwork');
+
+  // provide the data in the vis format
+  var data = {
+      nodes: nodes,
+      edges: edges
+  };
+  var options = {
+    edges:{
+      arrows: {
+        to: {enabled: true, scaleFactor:1, type:'arrow'},
+      }
+    },
+    physics: {
+      enabled: true
+    },
+    layout : {
+        randomSeed: 1234,
+        hierarchical: {
+            direction: 'UD',
+            sortMethod: 'directed'
+        }
+    }
+  };
+
+  // initialize your network!
+  console.log('initialize...')
+  var network = new vis.Network(container, data, options);
+}
+
+function update_graph(node_data, edge_data){
+  state_color = {
+    SUCCESS: 'green',
+    FAILED: 'red',
+    DEFINED: 'grey',
+    RUNNING: 'yellow'
+  }
+
+  // nodes.clear();
+
+
+  var now_nodes = _.map(node_data ,function(x){
+    return {id: x.id, label: x.name, color: state_color[x.state], shape: 'box'}
+  })
+  nodes.update(now_nodes);
+
+  var now_edges = _.map(edge_data ,function(x,index){
+    return {id: 'from_'+x[0]+'_to_'+x[1], from: x[0], to: x[1]}
+  })
+  edges.update(now_edges);
+
+}
+
+function update_yadage(date,state_data){
+    update_graph(state_data.dag.nodes, state_data.dag.edges)   
+    $('#timestamp').html(date)
+}
+
+
 $(document).ready(function(){
+    initialize_graph();
 
     var socket = io.connect(location.origin+'/monitor');
 
@@ -12,8 +105,13 @@ $(document).ready(function(){
     socket.on('room_msg', function (data) {
             console.log('got msg from room');
             console.log(data)
-            $('.logwindow').append('<div class="line"><span><code class="timestamp">'+data['date']+'</code></span><span><code class="message">'+escapeHTML(data['msg'])+'</code></span></div>')
-        });
+            if(data['type'] == 'log_message'){
+                $('.logwindow').append('<div class="line"><span><code class="timestamp">'+data['date']+'</code></span><span><code class="message">'+escapeHTML(data['msg'])+'</code></span></div>')
+            }
+            if(data['type'] == 'yadage_state'){
+                update_yadage(data['date'],data['data'])
+            }
+      });
 });
 
 function escapeHTML(s) {
@@ -33,8 +131,18 @@ function escapeHTML(s) {
 
 <div class="row">
     <div class="col-md-14">
-        <p>Messages from the request processor will appear below. </p>
-	<div class="logwindow"></div>
+        <div>
+            <h3>Workflow Visualization</h3>
+            <center>
+              <div id="mynetwork"></div>
+              <div>Last seen: <span id="timestamp"></span></div>
+            </center>
+        </div>
+        <div>
+            <h3>Log</h3>
+            <p>Messages from the request processor will appear below. </p>
+        	<div class="logwindow"></div>
+        </div>
     </div>
 </div>
 {% endblock %}
