--- a/recastcontrolcenter/templates/monitor.html
+++ b/recastcontrolcenter/templates/monitor.html
@@ -52,16 +52,13 @@ function initialize_graph(){
       }
     },
     physics: {
-      enabled: false
+      enabled: true
     },
     layout : {
-        improvedlayout:false,
         randomSeed: 1234,
         hierarchical: {
-            blockShifting: false,
-            edgeMinimization: false,
             sortMethod: 'directed',
-            direction: 'UD',
+            direction: 'UD'
         }
     }
   };
