--- a/recastcontrolcenter/templates/nav.html
+++ b/recastcontrolcenter/templates/nav.html
@@ -15,6 +15,7 @@
 
        <div class="collapse navbar-collapse menu" id="navbar-collapse">
             <ul class="nav navbar-nav">
+                <li id="nav-allreq"><a href="{{url_for('backendstatusview')}}">Backend Status</a></li>
                 <li id="nav-allreq"><a href="{{url_for('recast.recast_workflow_catalogue_view')}}">Implemented Analyses</a></li>
                 <li id="nav-allreq"><a href="{{url_for('recast.recast_requests_view')}}">All Requests</a></li>
             {% if session.has_key('user') %}
