--- a/recastcontrolcenter/templates/base.html
+++ b/recastcontrolcenter/templates/base.html
@@ -10,10 +10,10 @@
     <!-- Bootstrap -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 
-    <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='bower_components/bootstrap/dist/css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <link rel="shortcut icon" type="image/png" href="{{ url_for('static',filename='assets/recast.ico')}}"/>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="{{ url_for('static',filename='bower_components/jquery/dist/jquery.min.js')}}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +51,7 @@
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="{{ url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+  <script src="{{ url_for('static',filename='bower_components/bootstrap/dist/js/bootstrap.min.js')}}"></script>
   <style type="text/css" media="screen">
       body { padding-top: 70px; }
   </style>
