--- a/recastcontrolcenter/templates/monitor.html
+++ b/recastcontrolcenter/templates/monitor.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block prebody %}
-<script type="text/javascript" src="/static/bower_components/lodash/dist/lodash.js"></script>
-<script type="text/javascript" src="/static/bower_components/vis/dist/vis.js"></script>
-<link href="/static/bower_components/vis/dist/vis.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static',filename='bower_components/lodash/dist/lodash.js')}}"></script>
+<script type="text/javascript" src="{{ url_for('static',filename='bower_components/vis/dist/vis.js')}}"></script>
+<link href="{{ url_for('static',filename='bower_components/vis/dist/vis.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ url_for('static',filename='bower_components/jquery/dist/jquery.min.js')}}"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 
 <style type="text/css">
     #mynetwork {
@@ -66,6 +67,25 @@ function initialize_graph(){
   // initialize your network!
   console.log('initialize...')
   var network = new vis.Network(container, data, options);
+
+  network.on('selectNode',function(params){
+    var nodeid = params['nodes'][0];
+    data = nodes.get({
+      filter: function(item){
+        return item.id == nodeid
+      }
+    })
+    var node = data[0]
+    $('#nodebox').show()
+    $('#nodebox h4').html(node.label)
+    $('#nodebox div').html('State: '+node.state)
+    if(node.proxy_id != undefined){
+        $('#nodebox a').attr('href','/subjob_monitor/'+node.proxy_id)
+    }
+    else {
+        $('#nodebox a').attr('prop','dis')
+    }
+  })
 }
 
 function update_graph(node_data, edge_data){
@@ -76,12 +96,15 @@ function update_graph(node_data, edge_data){
     RUNNING: 'yellow'
   }
 
-  // nodes.clear();
-
-
   var now_nodes = _.map(node_data ,function(x){
-    return {id: x.id, label: x.name, color: state_color[x.state], shape: 'box'}
+    var task_id = undefined
+    if(x.proxy != undefined){
+      task_id = x.proxy.proxydetails.task_id
+    }
+
+    return {id: x.id, color: state_color[x.state], shape: 'box', label: x.name, state: x.state, proxy_id: task_id}
   })
+
   nodes.update(now_nodes);
 
   var now_edges = _.map(edge_data ,function(x,index){
@@ -92,29 +115,35 @@ function update_graph(node_data, edge_data){
 }
 
 function update_yadage(date,state_data){
+    console.log('the state!')
+    console.log(state_data)
     update_graph(state_data.dag.nodes, state_data.dag.edges)   
     $('#timestamp').html(date)
 }
 
-
 $(document).ready(function(){
     initialize_graph();
 
-    var socket = io.connect(location.origin+'/monitor');
+    namespace = '/wflow';
+    var socket = io.connect('//' + document.domain + ':' + location.port + namespace);
+    socket_global = socket;
 
-    socket.emit('helloServer');
-    socket.emit('subscribe');
-    socket.emit('join_recast_jobguid',{room:'{{jobguid}}'});
+    socket.on('join_ack', function(msg){
+      console.log(msg)
+    })
+
     socket.on('room_msg', function (data) {
-            console.log('got msg from room');
+            console.log('got msg from room ' + data.msg_type + ' ' + data.date);
             console.log(data)
-            if(data['type'] == 'log_message'){
+            if(data['msg_type'] == 'wflow_log'){
                 $('.logwindow').append('<div class="line"><span><code class="timestamp">'+data['date']+'</code></span><span><code class="message">'+escapeHTML(data['msg'])+'</code></span></div>')
             }
-            if(data['type'] == 'yadage_state'){
-                update_yadage(data['date'],data['data'])
+            if(data['msg_type'] == 'wflow_state'){
+                update_yadage(data['date'],data['state'])
             }
       });
+      socket.emit('join', {room: '{{workflow_id}}' });
+      socket.emit('roomit', {room: '{{workflow_id}}'});
 });
 
 function escapeHTML(s) {
@@ -128,23 +157,43 @@ function escapeHTML(s) {
 
 {% block container%}
 <div class="page-header">
-    <h1>Job Monitor <small>for job {{jobguid}}</small></h1>
+    <h1>Job Monitor <small>for Workflow {{workflow_id}}</small></h1>
 </div>
-
 
 <div class="row">
     <div class="col-md-14">
-        <div>
+        <div class="col-md-10">
+          <h4> Status: {{status}}  
+          {% if status=='SUCCESS' %}
+          <a href="/results/{{workflow_id}}">Results</a>
+          {% endif %}
+          </h4>
+      </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-14">
+        <div class="col-md-10">
             <h3>Workflow Visualization</h3>
             <center>
               <div id="mynetwork"></div>
               <div>Last seen: <span id="timestamp"></span></div>
             </center>
         </div>
+        <div class="col-md-2" id="nodebox" style="display: none">
+          <h4>Node: n/a</h4>
+          <div>Status: n/a</div>
+          <a href="#">Logs</a>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-14">
         <div>
             <h3>Log</h3>
             <p>Messages from the request processor will appear below. </p>
-        	<div class="logwindow"></div>
+          <div class="logwindow"></div>
         </div>
     </div>
 </div>
